--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1 style="text-align:center;">به نام خدا</h1>
 <pre style="text-align:center;">
 انگیزه نامه
-سحر کلیائی
-متولد 1377/11/29
+فاطمه محبی
+متولد1375/06/01 
 </pre>
 
 <hr>
@@ -24,7 +24,7 @@
 <hr>
 
 <h3 style="text-align:center;">تجربه های گذشته</h3>
-<p style="text-align:center;"> مسلط به زبان های برنامه نویسی --> --HTML--CSS--javascript--PHP-- <p>
+<p style="text-align:center;">  زبان های برنامه نویسی --> --HTML--CSS--javascript--PHP-- <p>
 
 <hr>
 
@@ -41,7 +41,7 @@
 
 <h5 style="text-align:center;">شخصیت</h5>
 <pre style="text-align:center;">
-شخصی خوش ذوق و با انگیزه هستم  که برای رسیدن به درجه ای بالا به علایقم تمام تلاشم رو به کار میگیرم تا به نحو احسنت به پایان برسونم و  ثمره ی تلاشم رو ببینم
+شخصی هستم  که برای رسیدن به درجه ای بالا به علایقم تمام تلاشم رو باوجود ضعف هایی که دارم به کار میگیرم تا به نحو احسنت به پایان برسونم و  ثمره ی تلاشم رو ببینم
 
 مشکلات همیشه وجود دارند 
 اکثر افراد در مقابلشان تسلیم مشوند
